# recommendation-system

./: .gitignore  README.md  data_placement_as_flp.ipynb  iosea_reqs.txt  requirements.txt  requirements_tmp.txt
app_decomposer/: AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
app_decomposer/.github/: ISSUE_TEMPLATE.md
app_decomposer/app_decomposer/: __init__.py  api_connector.py  app_decomposer.py  central_job.py  cli.py  config_parser.py  connector.py  job_decomposer.py  signal_decomposer.py  utils.py  utils_demo.py
app_decomposer/docs/: Makefile  app_decomposer.rst  compare_decomposing_signal_high_low_threshold.html  conf.py  decomposing_cumvol_write_signal_with_merge.html  decomposing_read_signal.html  decomposing_read_signal_high_threshold.html  decomposing_read_signal_merge.html  decomposing_write_signal.html  decomposing_write_signal_with_merge.html  figure_synthetic_signal.html  figure_timeseries_ioi_signal.html  index.rst  installation.rst  make.bat  modules.rst  usage.rst
app_decomposer/notebooks/: central-workflow.ipynb  comaprison_simulation_ioi_mixed_mode.ipynb  comparison_simulation_ioi_one_mode.ipynb  iosea-mid-term-review-demo.ipynb  iosea-wp3.4-recosys-workshop-4.pptx  job_decomposer.py  kmeans_methods_exploration.ipynb  ml_methods_exploration.ipynb  utils_demo.py
app_decomposer/tests/: __init__.py  test_app_decomposer.py  test_central_job.py  test_config.yaml  test_config_parser.py  test_connector.py  test_doc_figure_generator.py  test_job_decomposer.py  test_kiwi_jobs_1_signal.py  test_kiwi_jobs_mixed_signal.py  test_signal_decomposer.py
app_decomposer/tests_integration/: CMakeLists.txt  ioanalyticstools_deploy.yml  iopa_integration_config.json  iopa_integration_config.py  test_api_connector.py  test_connector.py  test_requirements.txt  test_token_connector.py
app_decomposer/tests_integration/templates/: test_config.yaml.j2
app_decomposer/tests_integration/test_data/: test_config.yaml  test_config_kc_ko.yaml  test_deep_config.yaml  test_docker_config.yaml  test_kiwi_config.yaml
cluster_simulator/: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.md  README.rst  analytics.py  application.py  cluster.py  cluster_simulator_optim.ipynb  cluster_simulator_poc.ipynb  config  monitor.py  phase.py  phase_event.py  playground.py  requirements.txt  setup.cfg  setup.py  tox.ini  utils.py  workflow.ipynb  workflow.py
cluster_simulator/cluster_simulator/: __init__.py  analytics.py  application.py  cluster.py  ephemeral_placement.py  monitor.py  phase.py  phase_features.py  placement_optimizer.py  playground.py  playground2.py  utils.py  workflow.py
cluster_simulator/docs/: Makefile  cluster_simulator.rst  conf.py  figure.html  figure2.html  index.rst  installation.rst  make.bat  usage.rst
cluster_simulator/notebooks/: cluster_simulator_optim.ipynb  cluster_simulator_poc.ipynb  deep_sbb_size.ipynb  documentation.ipynb  ephemeral_placement.py  flavor_optim  iosea-workshop-2.ipynb  iosea-workshop-3-ephemeral-tiers.ipynb  iosea-workshop-3.ipynb  workflow.ipynb
cluster_simulator/tests/: test.py  test_analytics.py  test_application.py  test_cluster_simulator.py  test_cluster_tiers.py  test_phase.py  test_phase_features.py  test_workflow.py
dataset_generation/: bson_reader.ipynb  get_dataset.py
dataset_generation/dataset_deep/: deep_jobs.ipynb
dataset_generation/dataset_generation/: dump_extractor.py  kiwi_qualification_jobs.ipynb
docs/: conf.py  index.rst  introduction.rst
facility_location_workshop/: data_placement_as_flp.ipynb  flp.ipynb  knapsack.ipynb
facility_location_workshop/.ipynb_checkpoints/: data_placement_as_flp-checkpoint.ipynb
fakeapp_generator/: __init__.py  dataset_generation.py  fakeapp.sbatch  fakeapp_generator.py  mod_sbatch.sbatch  perf_dataset_generation.py  run_fakeapp.sh
job_decomposer/: Pelt_Binseg_Botup_Wind_bench.csv  stat_methods.ipynb  stat_methods_exploration.ipynb
job_decomposer/job_decomposer/: Pelt_Binseg_Botup_Wind_bench.csv  Pelt_Binseg_Botup_Wind_bench_2.csv  benchmarker.py  elbow_benchmarker.py  job_decomposer.py  kernel_cpd.csv  kmeans_bench.csv  kmeans_methods_exploration.ipynb  ml_methods_exploration.ipynb  signal_methods_exploration.ipynb  simple_bench_oth_db.csv  stat_methods_demo.ipynb  stat_methods_exploration.ipynb  utils.py
job_decomposer/tests/: test_job_decomposer.py
jobmodel/: CHANGES.md  CMakeLists.txt  MANIFEST.in  README.md  requirements.txt  setup.py
jobmodel/jobmodel/: api_data_frame.ipynb  api_data_frame.py  burst_detection.py  db_size_regression.ipynb  distances.py  get_job_data.py  job_burst_detection.py  job_clustering.py  job_data_decomposition.ipynb  job_decompisition.ipynb  job_decomposition.ipynb  job_features.py  job_reconstruction.ipynb  mongodb_extractor.py  phase_comparator.py  phase_models.py  phase_sequencer.py  regression.ipynb  visualization.py
jobmodel/jobmodel/data/: db_size_jobs.csv  job_data.pkl  sermas_job_data.csv
jobmodel/jobmodel/job_decomposer/: burst_detector.py
jobmodel/tests/: CMakeLists.txt  test_api_data_frame.py  test_burst_detector.py  test_distances.py  test_job_clustering.py  test_job_features.py  test_mongodb_extractor.py  test_phase_sequencer.py
notebooks/: documentation.ipynb
performance_data/: AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  nohup.out  requirements.txt  setup.cfg  setup.py  tox.ini
performance_data/.github/: ISSUE_TEMPLATE.md
performance_data/docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
performance_data/performance_data/: __init__.py  cli.py  data_model.py  data_table.py  fakeapp_workload.py  perfomance_dataset.py  performance_data.py
performance_data/tests/: __init__.py  test_data_model.py  test_deep.py  test_fakeapp_workload.py  test_performance_data.py
workflow_optimizer/: CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  setup.cfg  setup.py  tox.ini
(+337 files in other folders)
